# rato-player

./: README.md
Projeto Lógico 2.1/: modelo-objeto-relacional-mysqlworkbench.mwb
Projeto-Lógico/Modelo-Objeto-Relacional/: rato-player.sql
Projeto-Lógico/NoSQL/: Script_RatoPlayer_mongodb.js
Projeto-Prático-1/: .env.example  README.md  criarSchema.sql  schema.sql  script.py  script.sql
Projeto-Prático-2/: .env.example  README.md  requirements.txt
Projeto-Prático-2/rato-player/: .env  .env.example  README.md  app.py  database.py  enums.py  models.py  pyproject.toml  schemas.py  settings.py
Projeto-Prático-2/rato-player/databases/: mongo.py  postgres.py
Projeto-Prático-2/rato-player/rato_player/: app.py  enums.py  models.py  schemas.py  settings.py
Projeto-Prático-2/rato-player/rato_player/databases/: mongo.py  postgres.py
Projeto-Prático-2/rato-player/rato_player/routers/: colecoes.py  colecoes_mongo.py  colecoes_postgres.py  generos.py  generos_mongo.py  generos_postgres.py
Projeto-Prático-2/rato-player/routers/: colecoes.py  generos.py
Projeto-Prático-2/rato-player/schemas/: colecao.py  genero.py  mensagem.py
