[project]
name = "rato-player"
version = "0.1.0"
description = ""
authors = [
    {name = "gustaaragao",email = "gustavohenriquearagaosilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "motor (>=3.3.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.8"
pytest-asyncio = "^1.1.0"
factory-boy = "^3.3.3"
freezegun = "^1.5.5"

[tool.ruff]
line-length = 88 # O comprimento máximo de linha para 79 caracteres (sugestão do PEP-8)

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single' # Altera as aspas duplas por aspas simples para strings

[tool.pytest.ini_options]
pythonpath = "."
addopts = '--cov=. -p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev rato_player/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=rato_player -vv'
post_test = 'coverage html'
coverage = 'python -m http.server 8080 --directory htmlcov'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

